<resources>
    <string name="app_name">Mis Boletas</string>
    <string name="iniciarsesion_lbliniciarsesion">Iniciar Sesion</string>
    <string name="listaboletas_lbl_todos">Todos</string>
    <string name="listaboletas_lbl_noleidos">No Leídos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="busquedaboletas_lbl_mes">Mes</string>
    <string name="busquedaboletas_lbl_anio">Año</string>
    <string name="busquedaboletas_lbl_mensaje">Seleccione mes y año para encontrar una boleta</string>
    <string name="cambioclave_lbl_claveanterior">Clave actual</string>
    <string name="cambioclave_lbl_clavenueva">Nueva clave</string>
    <string name="cambioclave_lbl_clavenueva_repeat">Confirme nueva clave</string>
    <string name="cambioclave_btn_guardar">Guardar</string>

    <!--placeholder-->
    <string name="title_usuario">Usuario</string>
    <string name="title_contrasena">Contraseña</string>
    <string name="title_empresa">Empresa</string>

    <!--archivo preferences-->
    <string name="preferences_app">preferences_app</string>
    <string name="preferences_idempresa">preferences_idempresa</string>
    <string name="preferences_user">preferences_user</string>
    <string name="preferences_pass">preferences_pass</string>
    <string name="preferences_periodo">preferences_periodo</string>

    <string name="tab_boletas">Boleta</string>
    <string name="tab_cargo">Cargo</string>
    <string name="title_activity_maps">Map</string>
</resources>
