<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    tools:context="com.tincio.visualizarboletas.presentation.fragment.CambioClaveFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/cambioclave_lbl_claveanterior"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:inputType="textPassword"
            android:id="@+id/txt_clave_actual"
            android:background="@drawable/rectangle_gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/cambioclave_lbl_clavenueva"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:inputType="textPassword"
            android:id="@+id/txt_clave_nueva"
            android:background="@drawable/rectangle_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/cambioclave_lbl_clavenueva_repeat"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:inputType="textPassword"
            android:id="@+id/txt_clave_nueva_repeat"
            android:background="@drawable/rectangle_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/padd_layout_verificar"
            android:paddingBottom="@dimen/padd_layout_verificar"
            android:layout_alignParentBottom="true"
            android:id="@+id/linear_guardar_clave"
            android:clickable="true"
            android:background="@drawable/selector_button_verificar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/txt_btn_verificar"
                android:text="@string/cambioclave_btn_guardar"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
