<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.tincio.visualizarboletas.presentation.fragment.BusquedaBoletasFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/busquedaboletas_lbl_mensaje"
            android:textStyle="bold"
            android:padding="15dp"
            />
       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@color/orange_800"></View>
    </LinearLayout>
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/busquedaboletas_lbl_mes"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />
        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_mes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/busquedaboletas_lbl_anio"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />
        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_anio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/orange_800"></View>
    <include
        layout="@layout/linear_row_boletapago_seleccionada"></include>
</LinearLayout>
